openshift/pipeline/deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: nodejs-seba
  name: nodejs-seba
  namespace: seba
spec:
  replicas: 1
  selector:
    deploymentconfig: nodejs-seba
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-seba
        deploymentconfig: nodejs-seba
    spec:
      containers:
        - image: sebassch/example
          name: nodejs-seba
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: nodejs-seba
  name: nodejs-seba
  namespace: seba
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: nodejs-seba
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: nodejs-seba
  name: nodejs-seba
  namespace: seba
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: nodejs-seba
    weight: 100
  wildcardPolicy: None
